<resources>
    <string name="app_name">HashScope</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="hashscope">HashScope</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="select_category">Select a Category</string>
    <string name="technology">Technology</string>
    <string name="economy">Economy</string>
    <string name="politics">Politics</string>
    <string name="main">Main</string>
    <string name="grafik">Grafik</string>
    <string name="profil">Profil</string>
    <string name="main_topics">Main Topics</string>
    <string name="enter_email">Enter email</string>
    <string name="full_text">Full Text</string>
    <string name="source">Source</string>
    <string name="url">URL</string>
    <string name="created_at">Created At</string>
    <string name="location">Location</string>
    <string name="retweet_count">Retweet Count</string>
    <string name="author_name">Author Name</string>
    <string name="like_count">Like Count</string>
    <string name="frekuensi_topik_saat_ini">Frekuensi Topik Saat Ini</string>
    <string name="lihat_detail_grafik_1">Lihat Detail Grafik 1</string>
    <string name="prediksi_frekuensi_topik">Prediksi Frekuensi Topik</string>
    <string name="lihat_detail_grafik_2">Lihat Detail Grafik 2</string>
    <string name="no_main_topics_available">No main topics available.</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="nama_user">Nama User</string>
    <string name="email_user">Email User</string>
    <string name="logout">Logout</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="topic_name">Topic Name</string>
    <string name="frequency_0">Frequency: 0</string>
    <string name="topic">Topic</string>
    <string name="previous_frequency">Previous Frequency</string>
    <string name="predicted_frequency">Predicted Frequency</string>
    <string name="change_percentage">Change Percentage</string>

</resources>