<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.CategoryFragment">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_category"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/logoImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/technologyCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/technology"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.6" />

    <Button
        android:id="@+id/economyCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/economy"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/technologyCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.6" />

    <Button
        android:id="@+id/politicsCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/politics"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/economyCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.6" />
</androidx.constraintlayout.widget.ConstraintLayout>
